Changes from jTDS 0.9-rc2
=========================

09/28/2004 - Alin Sinpalean
 o Corrected bug [1036058] DataSource implementation broken. Thanks, Mike for
   finding this before the new release.

09/27/2004 - Alin Sinpalean
 o Update counts are read and cached completely (either until the end of the
   response or until a ResultSet is encountered) and exceptions are thrown when
   an output parameter is read before being set. This means that stored
   procedures that return only update counts are processed completely when
   executed and output parameter values are available right away.
 o Implemented some more support for spcursorprepare (still not complete, so
   not used yet).
 o Updated the documentation of sp_cursorprepare in apiCursors.html and some
   minor things in TDS.html.
 o prepareSql=3 (sp_prepare) is supported by TDS 7.0, small update to use it in
   jTDS (until now it was downgraded to sp_executesql -- prepareSql=2).

09/24/2004 - Alin Sinpalean
 o Updated JtdsDatabaseMetaData.getDriverVersion() to also include misc
   version information.

09/23/2004 - Alin Sinpalean
 o Applied Mike's patch [1030475] Scrollable/Updateable result sets for Sybase.

09/23/2004 - Alin Sinpalean
 o Changed the default TDS version to 8.0 when connecting to SQL Server.
 o Corrected bug [1032278] metadata.getColumnClassName not match
   resultset.getObject. Also improved handling of LOB columns in updateable
   ResultSets: until now, updateObject with a LOB value caused the whole
   content to be cached into memory.
 o getObject() (both in JtdsResultSet and JtdsCallableStatement) returned
   UniqueIdentifier objects for UNIQUEIDENTIFIER columns. Fixed.
 o Modified some TdsCore.executeSQL() calls to send -1 for maxRows (in order to
   avoid unnecessary SET ROWCOUNT queries).
 o JtdsDataSource uses the default values from DefaultProperties instead of
   duplicating the initialization. Also, for easier handling, all values are
   kept internally as Strings.
