@@ -2,6 +2,11 @@ Changes from jTDS 0.9-rc2
 =========================
 
 09/28/2004 - Alin Sinpalean
+ o Corrected bug [1036059] getTimestamp with Calendar applies tzone offset
+   wrong way. The getTimestamp(), getTime() and getDate() methods with Calendar
+   parameters were applying the time zone difference the same way as the set
+   methods (hope it's not the set methods that were wrong, the JDBC spec is
+   VERY vague about how the Calendar should be used).
  o Corrected bug [1036058] DataSource implementation broken. Thanks, Mike for
    finding this before the new release.
 
